relative paths to fonts

--- a/css/elements/icon.css
+++ b/css/elements/icon.css
@@ -26,8 +26,8 @@
 *******************************/
 @font-face {
   font-family: 'Icons';
-  src: url(/fonts/icons.eot);
-  src: url(/fonts/icons.eot?#iefix) format('embedded-opentype'), url(/fonts/icons.svg#icons) format('svg'), url(/fonts/icons.woff) format('woff'), url(/fonts/icons.ttf) format('truetype');
+  src: url(../../fonts/icons.eot);
+  src: url(../../fonts/icons.eot?#iefix) format('embedded-opentype'), url(../../fonts/icons.svg#icons) format('svg'), url(../../fonts/icons.woff) format('woff'), url(../../fonts/icons.ttf) format('truetype');
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
