--- a/stylesheets/semantic.css
+++ b/stylesheets/semantic.css
@@ -1190,6 +1190,9 @@ body.progress .ui.progress .bar {
 .ui.large.menu .footer .circular.inverted.lighter.icon:hover{
     background-color: rgba(255, 255, 255, 0.2);
 }
+.ui.inverted.menu .footer a.item.ui.header {
+  background-color: rgba(255, 255, 255, 0) !important;
+}
 
 
 @media only screen and (max-width: 1725px) {
